--- a/back_end/sy_shop/src/main/resources/application.yml
+++ b/back_end/sy_shop/src/main/resources/application.yml
@@ -31,7 +31,7 @@ spring:
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl # 开启日志，输出SQL语句
-  type-aliases-package: com.jy2b.zxxfd.entity # 指定实体类别名路径
+  type-aliases-package: com.jy2b.zxxfd.domain # 指定实体类别名路径
   mapper-locations: classpath:/mapper/*.xml
 server:
   port: 8081 # 指定端口号
