2023年03月11日/林武泰/毕业设计代码/优化服务器版

--- a/back_end/sy_shop/src/main/resources/application.yml
+++ b/back_end/sy_shop/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    active: test
+    active: dev
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/sy_shop?characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
