--- a/front_end/syshop-admin/package.json
+++ b/front_end/syshop-admin/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "axios": "^1.1.3",
     "core-js": "^3.6.5",
-    "element-ui": "^2.15.10",
+    "echarts": "^5.4.1",
+    "element-ui": "^2.15.13",
     "vue": "^2.6.11",
     "vue-router": "^3.0.7",
     "vuex": "^3.4.0"
