--- a/back_end/sy_shop/pom.xml
+++ b/back_end/sy_shop/pom.xml
@@ -119,6 +119,18 @@
             <artifactId>UserAgentUtils</artifactId>
             <version>1.21</version>
         </dependency>
+
+        <!--发送短信依赖-->
+        <dependency>
+            <groupId>com.tencentcloudapi</groupId>
+            <artifactId>tencentcloud-sdk-java-sms</artifactId>
+            <version>3.1.718</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tencentcloudapi</groupId>
+            <artifactId>tencentcloud-sdk-java</artifactId>
+            <version>3.1.718</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
