2023年03月31日/林武泰/毕业设计代码/新增邮箱工具类

--- a/back_end/sy_shop/pom.xml
+++ b/back_end/sy_shop/pom.xml
@@ -131,6 +131,18 @@
             <artifactId>tencentcloud-sdk-java</artifactId>
             <version>3.1.718</version>
         </dependency>
+
+        <!--邮件服务-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-net</groupId>
+            <artifactId>commons-net</artifactId>
+            <version>3.3</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
